# sample

./: .gitignore  play.py  pyproject.toml  train.py
othello/: OthelloGame.py
othello/bots/DeepLearning/: OthelloModel.py
